[package]
name = "sort_it_out"
authors = ["One_Ordinary_Man",]
description = "All sorting algorithms with generics vectors."
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.0", features=["derive"]}
